Elastic: Small spacing fix

--- a/plugins/libkolab/skins/elastic/libkolab.less
+++ b/plugins/libkolab/skins/elastic/libkolab.less
@@ -67,9 +67,9 @@
             }
 
             &.folder .listname:before {
-                // TODO: notes folder icon, maybe need to use #notebooks parent
                 &:extend(.font-icon-class);
                 content: @fa-var-sticky-note;
+                margin-right: .5rem;
             }
 
             span.handle {
